tests/error/array_failure.gw
#! [contains] NegativeArraySize
int i[2][-1];
